<resources>
    <string name="true_cloudv3_page_name_title">True Cloud</string>
    <string name="true_cloudv3_category">Category</string>
    <string name="true_cloudv3_menu_images">Images</string>
    <string name="true_cloudv3_menu_videos">Videos</string>
    <string name="true_cloudv3_menu_audio">Audio</string>
    <string name="true_cloudv3_menu_files">Files</string>
    <string name="true_cloudv3_menu_others">Others</string>
    <string name="true_cloudv3_menu_contacts">Contacts</string>
    <string name="true_cloudv3_menu_all_files">All files</string>
    <string name="true_cloudv3_menu_trash">Trash</string>
    <string name="true_cloudv3_menu_settings">Settings</string>
    <string name="true_cloudv3_menu_collection">Collection</string>
    <string name="true_cloudv3_menu_recent_upload">Recent Upload</string>
    <string name="true_cloudv3_menu_favorite">Favorite</string>
    <string name="true_cloudv3_storage_used">%s used</string>
    <string name="true_cloudv3_storage_total">%s total</string>
    <string name="true_cloudv3_empty_message">There are no files uploaded</string>
    <string name="true_cloudv3_error_message">Something went wrong, please try again.</string>
    <string name="true_cloudv3_error_message_common">Something went wrong. \nPlease try again later.</string>
    <string name="true_cloudv3_max_file_message">Can select up to 20 items per time</string>
    <string name="true_cloudv3_upload_menu_true_cloud_storage">True Cloud Storage</string>
    <string name="true_cloudv3_upload_menu_title">Upload</string>
    <string name="true_cloudv3_upload_menu_images">Images</string>
    <string name="true_cloudv3_upload_menu_videos">Videos</string>
    <string name="true_cloudv3_upload_menu_contacts">Contacts</string>
    <string name="true_cloudv3_upload_menu_audio">Audio</string>
    <string name="true_cloudv3_upload_menu_files">Files</string>
    <string name="true_cloudv3_option_menu_title">Option</string>
    <string name="true_cloudv3_option_menu_share">Copy Share Link</string>
    <string name="true_cloudv3_option_menu_download">Download</string>
    <string name="true_cloudv3_option_menu_delete">Delete from True Cloud</string>
    <string name="true_cloudv3_upload_contact">Upload Contact</string>
    <string name="true_cloudv3_contact_menu_title">Contacts</string>
    <string name="true_cloudv3_edit_contact_menu_title">Edit contact</string>
    <string name="true_cloudv3_button_login">Login</string>
    <string name="true_cloudv3_button_setting">Settings</string>
    <string name="true_cloudv3_button_later">Later</string>
    <string name="true_cloudv3_button_retry">Retry</string>
    <string name="true_cloudv3_button_cancel">Cancel</string>
    <string name="true_cloudv3_button_confirm">Confirm</string>
    <string name="true_cloudv3_button_ok">Ok</string>
    <string name="true_cloudv3_button_save">Save</string>
    <string name="true_cloudv3_dialog_title_file">Permission Denied</string>
    <string name="true_cloudv3_dialog_subtitle_file">You have disabled the access to Files, please enable it from "Settings".</string>
    <string name="true_cloudv3_dialog_title_contact">Permission Denied</string>
    <string name="true_cloudv3_dialog_subtitle_contact">You have disabled the access to Contacts, please enable it from "Settings".</string>
    <string name="true_cloudv3_dialog_subtitle_notification">You have disabled the Notifications, please enable it from "Settings".</string>
    <string name="true_cloudv3_dialog_title_sorry">Sorry</string>
    <string name="true_cloudv3_dialog_subtitle_something_wrong">Something went wrong (%s).\nPlease try again.</string>
    <string name="true_cloudv3_dialog_title_delete">Would you like to delete all selected items?</string>
    <string name="true_cloudv3_dialog_subtitle_delete">If you delete, you will delete all items you selected.</string>
    <string name="true_cloudv3_upload_title_success_single">New file added</string>
    <string name="true_cloudv3_upload_title_success_multiple">%s new files added</string>
    <string name="true_cloudv3_delete_success">Delete item successfully</string>
    <string name="true_cloudv3_delete_error">Failed to delete this item</string>
    <string name="true_cloudv3_storage_bar_title">True Cloud Storage</string>
    <string name="true_cloudv3_storage_bar_used">%s used</string>
    <string name="true_cloudv3_storage_bar_total">%s total</string>
    <string name="true_cloudv3_storage_detail">%1$s of %2$s used</string>
    <string name="true_cloudv3_copy_success">Copied successfully</string>
    <string name="true_cloudv3_copy_error">Can’t copy share link</string>
    <string name="true_cloudv3_upload_progress_bar_total_multiple">Uploading %s files</string>
    <string name="true_cloudv3_upload_progress_bar_total_single">Uploading %s file</string>
    <string name="true_cloudv3_cancel_success">Upload cancelled</string>
    <string name="true_cloudv3_upload_status_uploading">Uploading... %s</string>
    <string name="true_cloudv3_upload_status_downloadinging">Downloading... %s%%</string>
    <string name="true_cloudv3_status_upload">Uploading...</string>
    <string name="true_cloudv3_status_pending">Pending...</string>
    <string name="true_cloudv3_status_paused">Paused</string>
    <string name="true_cloudv3_status_failed">Failed</string>
    <string name="true_cloudv3_status_complete">Complete</string>
    <string name="ture_cloudv3_status_inqueue">In Queue</string>
    <string name="true_cloudv3_notification_channel_name">TransferNotificationChannel</string>
    <string name="true_cloudv3_notification_title">Upload</string>
    <string name="true_cloudv3_notification_text">Uploading...</string>
    <string name="true_cloudv3_dialog_create_new">Create New</string>
    <string name="true_cloudv3_dialog_folder">Folder</string>
    <string name="true_cloudv3_dialog_upload">Upload</string>
    <string name="true_cloudv3_dialog_option">Option</string>
    <string name="true_cloudv3_dialog_select">Select</string>
    <string name="true_cloudv3_dialog_sort_by">Sort by</string>
    <string name="true_cloudv3_dialog_add_new_folder">Add new folder</string>
    <string name="true_cloudv3_dialog_download">Download</string>
    <string name="true_cloudv3_dialog_rename">Rename</string>
    <string name="true_cloudv3_dialog_delete">Remove To Trash</string>
    <string name="true_cloudv3_dialog_view_file">View File</string>
    <string name="true_cloudv3_dialog_photo_editor">Edit image</string>
    <string name="true_cloudv3_dialog_a_to_z">Title A to Z</string>
    <string name="true_cloudv3_dialog_z_to_a">Title Z to A</string>
    <string name="true_cloudv3_dialog_new_to_old">New to old</string>
    <string name="true_cloudv3_dialog_old_to_new">Old to new</string>
    <string name="true_cloudv3_dialog_size_large_to_small">Size large to small</string>
    <string name="true_cloudv3_dialog_size_small_to_large">Size small to large</string>
    <string name="true_cloudv3_dialog_apply">Apply</string>
    <string name="true_cloudv3_dialog_migration">Migration</string>
    <string name="true_cloudv3_dialog_migration_success">Data Migration Success</string>
    <string name="true_cloudv3_dialog_migration_detail">Data migration option will be available only until May 31, 2023. If you want to migrate later, go to: Settings > Data Migration</string>
    <string name="true_cloudv3_dialog_migration_detail_success">Data Migration is completed. You can find your files in All Files.</string>
    <string name="true_cloudv3_dialog_migration_go_to_all_file">Go to All Files</string>
    <string name="true_cloudv3_dialog_migration_dismiss">Dismiss</string>
    <string name="true_cloudv3_dialog_cancel">Cancel</string>
    <string name="true_cloudv3_dialog_open_setting">Open Setting</string>
    <string name="true_cloudv3_dialog_sync_all_contacts">Sync all contacts</string>
    <string name="true_cloudv3_dialog_title_confirm_sync_all_contacts">Do you want to sync all contacts on this device again?</string>
    <string name="true_cloudv3_dialog_subtitle_confirm_sync_all_contacts">You have performed sync all contacts on this device already. You will have duplicated items if you sync again.</string>
    <string name="true_cloudv3_dialog_select_contacts">Select contacts to upload</string>
    <string name="true_cloudv3_dialog_delete_all_contacts">Delete all contacts</string>
    <string name="true_cloudv3_dialog_title_confirm_delete_all_contacts">Would you like to delete all contacts?</string>
    <string name="true_cloudv3_dialog_subtitle_confirm_delete_all_contacts">If you delete, you will delete all contacts on True Cloud.</string>
    <string name="true_cloudv3_dialog_export_to_device">Export to device</string>
    <string name="true_cloudv3_dialog_success_download">Successfully Downloaded</string>
    <string name="true_cloudv3_dialog_create_folder_cancel">Cancel</string>
    <string name="true_cloudv3_dialog_create_folder_create_folder">Create Folder</string>
    <string name="true_cloudv3_dialog_create_folder_hint">Enter new folder name</string>
    <string name="true_cloudv3_dialog_rename_hint">Enter new file name</string>
    <string name="true_cloudv3_upload_header">Upload (%s)</string>
    <string name="true_cloudv3_auto_backup_header">Auto Backup (%s)</string>
    <string name="true_cloudv3_upload_cancel_all">Cancel All</string>
    <string name="true_cloudv3_d_selected">%d selected</string>
    <string name="true_cloudv3_select_all">Select all</string>
    <string name="true_cloudv3_edit_contact_firstname">First Name</string>
    <string name="true_cloudv3_edit_contact_lastname">Last Name</string>
    <string name="true_cloudv3_edit_contact_email">Email</string>
    <string name="true_cloudv3_edit_contact_select_label">Select Label</string>
    <string name="true_cloudv3_dialog_no_label">No Label</string>
    <string name="true_cloudv3_dialog_mobile">Mobile</string>
    <string name="true_cloudv3_dialog_work">Work</string>
    <string name="true_cloudv3_dialog_home">Home</string>
    <string name="true_cloudv3_dialog_main">Main</string>
    <string name="true_cloudv3_dialog_work_fax">Work Fax</string>
    <string name="true_cloudv3_dialog_home_fax">Home Fax</string>
    <string name="true_cloudv3_dialog_other">Other</string>
    <string name="true_cloudv3_dialog_custom">Custom</string>
    <string name="true_cloudv3_dialog_label_name">Label Name</string>
    <string name="true_cloudv3_dialog_create">Create</string>
    <string name="true_cloudv3_dialog_custom_label_name">Custom Label Name</string>
    <string name="true_cloudv3_edit_contact_label">Label</string>
    <string name="true_cloudv3_edit_contact_phone">Phone</string>
    <string name="true_cloudv3_migrating_data">Migrating data</string>
    <string name="true_cloudv3_migrate_data">Migrate Data</string>
    <string name="true_cloudv3_migrate_data_detail">Migrate by May 31, 2023</string>
    <string name="true_cloudv3_later">Later</string>
    <string name="true_cloudv3_download_file_completed">Download file completed</string>
    <string name="true_cloudv3_download_file_error">Download error : %s</string>
    <string name="true_cloudv3_binary_size_format">%.2f</string>
    <string name="true_cloudv3_start_migration_data">Start migration data from True Cloud previous version.</string>
    <string name="true_cloudv3_start_migration_detail">This is True Cloud new version, you previously have data in previous version, you can migrate your data</string>
    <string name="true_cloudv3_migration_data_checking">checking...</string>
    <string name="true_cloudv3_migration_dismiss">Dismiss</string>
    <string name="true_cloudv3_migration_cancel">Cancel</string>
    <string name="true_cloudv3_migration_do_you_want_to_cancel_it">Do you want to cancel it?</string>
    <string name="true_cloudv3_migration_cancel_detail">The Migrating data will be canceled. However, you’ll see successful uploading data in your Truecloud.</string>
</resources>