<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_true_cloudv3_upload_dialog"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/true_cloudv3_spacing_m"
        android:paddingTop="@dimen/true_cloudv3_spacing_l"
        android:paddingBottom="@dimen/true_cloudv3_spacing_2s">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/collapseImageView"
            android:layout_width="@dimen/true_cloudv3_spacing_l"
            android:layout_height="@dimen/true_cloudv3_spacing_l"
            android:src="@drawable/quantum_ic_keyboard_arrow_down_white_36"
            android:tint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TrueID.Header3.Bold.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/true_cloudv3_spacing_2s"
            android:text="@string/true_cloudv3_edit_contact_select_label" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="@dimen/true_cloudv3_spacing_m"
        android:background="@color/true_cloudv3_line_separator_color" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/text_sync"
        android:layout_below="@+id/tool_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/trueCloudNoLabelTextView"
                style="@style/TrueID.Body.LightGrey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/true_cloudv3_spacing_3m"
                android:gravity="center"
                android:paddingLeft="@dimen/true_cloudv3_spacing_m"
                android:paddingRight="@dimen/true_cloudv3_spacing_m"
                android:paddingBottom="@dimen/true_cloudv3_spacing_m"
                android:text="@string/true_cloudv3_dialog_no_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/trueCloudMobileTextView"
                style="@style/TrueID.Body.LightGrey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/true_cloudv3_spacing_m"
                android:text="@string/true_cloudv3_dialog_mobile" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/trueCloudWorkTextView"
                style="@style/TrueID.Body.LightGrey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/true_cloudv3_spacing_m"
                android:text="@string/true_cloudv3_dialog_work" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/trueCloudHomeTextView"
                style="@style/TrueID.Body.LightGrey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/true_cloudv3_spacing_m"
                android:text="@string/true_cloudv3_dialog_home" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/trueCloudMainTextView"
                style="@style/TrueID.Body.LightGrey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/true_cloudv3_spacing_m"
                android:text="@string/true_cloudv3_dialog_main" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/trueCloudWorkFaxTextView"
                style="@style/TrueID.Body.LightGrey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/true_cloudv3_spacing_m"
                android:text="@string/true_cloudv3_dialog_work_fax" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/trueCloudHomeFaxTextView"
                style="@style/TrueID.Body.LightGrey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/true_cloudv3_spacing_l"
                android:text="@string/true_cloudv3_dialog_home_fax" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/trueCloudOtherTextView"
                style="@style/TrueID.Body.LightGrey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/true_cloudv3_spacing_m"
                android:text="@string/true_cloudv3_dialog_other" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/trueCloudCustomTextView"
                style="@style/TrueID.Body.LightGrey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/true_cloudv3_spacing_m"
                android:text="@string/true_cloudv3_dialog_custom" />
        </LinearLayout>
    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>
