<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_true_cloudv3_upload_dialog"
    android:orientation="vertical"
    android:paddingBottom="@dimen/true_cloudv3_spacing_m">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/true_cloudv3_spacing_m"
        android:paddingTop="@dimen/true_cloudv3_spacing_l"
        android:paddingBottom="@dimen/true_cloudv3_spacing_2s">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/collapseImageView"
            android:layout_width="@dimen/true_cloudv3_spacing_l"
            android:layout_height="@dimen/true_cloudv3_spacing_l"
            android:src="@drawable/quantum_ic_keyboard_arrow_down_white_36"
            android:tint="@color/black" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TrueID.Header3.Bold.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/true_cloudv3_spacing_2s"
            android:text="@string/true_cloudv3_dialog_sort_by" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="@dimen/true_cloudv3_spacing_m"
        android:background="@color/true_cloudv3_line_separator_color" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/true_cloudv3_spacing_m"
        android:layout_marginTop="@dimen/true_cloudv3_spacing_m"
        android:layout_marginEnd="@dimen/true_cloudv3_spacing_m">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/trueCloudRadioAtoZRadioButton"
            style="@style/Widget.TrueID.RadioButton.SortBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/true_cloudv3_spacing_2s"
            android:background="@drawable/background_true_cloudv3_border_sortby_button"
            android:drawablePadding="@dimen/true_cloudv3_spacing_3s"
            android:padding="@dimen/true_cloudv3_spacing_m"
            android:text="@string/true_cloudv3_dialog_a_to_z" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/trueCloudZtoARadioButton"
            style="@style/Widget.TrueID.RadioButton.SortBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/true_cloudv3_spacing_2s"
            android:background="@drawable/background_true_cloudv3_border_sortby_button"
            android:drawablePadding="@dimen/true_cloudv3_spacing_3s"
            android:padding="@dimen/true_cloudv3_spacing_m"
            android:text="@string/true_cloudv3_dialog_z_to_a" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/trueCloudNewToOldRadioButton"
            style="@style/Widget.TrueID.RadioButton.SortBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/true_cloudv3_spacing_2s"
            android:background="@drawable/background_true_cloudv3_border_sortby_button"
            android:checked="true"
            android:drawablePadding="@dimen/true_cloudv3_spacing_3s"
            android:padding="@dimen/true_cloudv3_spacing_m"
            android:text="@string/true_cloudv3_dialog_new_to_old" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/trueCloudOldToNewRadioButton"
            style="@style/Widget.TrueID.RadioButton.SortBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/true_cloudv3_spacing_2s"
            android:background="@drawable/background_true_cloudv3_border_sortby_button"
            android:drawablePadding="@dimen/true_cloudv3_spacing_3s"
            android:padding="@dimen/true_cloudv3_spacing_m"
            android:text="@string/true_cloudv3_dialog_old_to_new" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/trueCloudSizeLargeToSmallRadioButton"
            style="@style/Widget.TrueID.RadioButton.SortBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/true_cloudv3_spacing_2s"
            android:background="@drawable/background_true_cloudv3_border_sortby_button"
            android:drawablePadding="@dimen/true_cloudv3_spacing_3s"
            android:padding="@dimen/true_cloudv3_spacing_m"
            android:text="@string/true_cloudv3_dialog_size_large_to_small" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/trueCloudSizeSmallToLargeRadioButton"
            style="@style/Widget.TrueID.RadioButton.SortBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/true_cloudv3_spacing_2s"
            android:background="@drawable/background_true_cloudv3_border_sortby_button"
            android:drawablePadding="@dimen/true_cloudv3_spacing_3s"
            android:padding="@dimen/true_cloudv3_spacing_m"
            android:text="@string/true_cloudv3_dialog_size_small_to_large" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/trueCloudSortByApplyButton"
        style="@style/TrueID.Header3.Bold.White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/true_cloudv3_spacing_m"
        android:layout_marginTop="@dimen/true_cloudv3_spacing_m"
        android:layout_marginEnd="@dimen/true_cloudv3_spacing_m"
        android:background="@drawable/common_round_black"
        android:gravity="center"
        android:paddingStart="@dimen/true_cloudv3_spacing_2s"
        android:paddingTop="@dimen/true_cloudv3_spacing_3s"
        android:paddingEnd="@dimen/true_cloudv3_spacing_2s"
        android:paddingBottom="@dimen/true_cloudv3_spacing_3s"
        android:text="@string/true_cloudv3_dialog_apply" />

</androidx.appcompat.widget.LinearLayoutCompat>
